k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-system
  labels:
    app: doc-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: doc-system
